fix: prevent line break in apply now button
Closes #122

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -540,7 +540,7 @@ body.job-posts {
   }
   
   .job-posts .cmp-job-post__inner-wrap .cmp-job-post__meta {
-    grid-column: 2 / span 2;
+    grid-column: 2 / span 3;
     position: sticky;
     top: 2rem;
   }
@@ -614,7 +614,7 @@ body.job-posts {
   }
   
   .job-posts .cmp-job-post__inner-wrap .cmp-job-post__meta {
-    grid-column: 2 / span 2;
+    grid-column: 2 / span 3;
   }
   
   .job-posts .cmp-job-post__inner-wrap .cmp-job-post__details {
@@ -629,5 +629,11 @@ body.job-posts {
   .job-posts .cmp-about-ad-container div > *,
   .job-posts .cmp-eoe-container div > * {
     grid-column: 1 / -1;
+  }
+}
+
+@media (min-width: 1400px) {
+  .job-posts .cmp-job-post__inner-wrap .cmp-job-post__meta {
+    grid-column: 2 / span 2;
   }
 }
